Week05 fixed input on bottom, display messages from the bottom of screen, removed always displayed scrollbar (#134)
* fills any size window

* fixed input bar to bottom of screen

* start to display messages from the bottom

* Update src/components/BottomInputComponent.js

remove old commented out code

--- a/src/components/BottomInputComponent.css
+++ b/src/components/BottomInputComponent.css
@@ -2,8 +2,10 @@
 .bottom-input-form {
   display: flex;
   justify-content: center;
-  background-color: #1A2930;
   align-items: center;
+  flex-grow: 1;
+  flex-shrink: 1;
+  max-width: 750px;
 }
 
 /* styling for the input field */
@@ -13,8 +15,12 @@
   margin-bottom: 20px;
   margin-right: 15px;
   border-radius: 10px !important;
-  font-size: 25px;
-  width: 70%;
+  font-size: 20px;
+  width: 80%;
+}
+
+.container-bottom-input-form {
+  justify-content: center !important;
 }
 
 .wrapper {
