--- a/src/components/MiddleChatWindow.css
+++ b/src/components/MiddleChatWindow.css
@@ -3,10 +3,10 @@
   margin: auto;
   list-style-type: none;
   text-decoration: none;
-  background-color: #1A2930;
-  height: 90vh;
-  overflow: scroll;
-  padding-top: 150px;
+  padding-top: 125px;
+  padding-bottom: 100px;
+  min-height: 100vh;
+  flex-direction: column-reverse;
 }
 /* styling for each message displayed in chat window */
 .list-item {
